welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:9: error: ';' expected but ':' found.
estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
                       ^