welcome.lessons.welcome.bdr.BDR.scala.code
litMessage()

val nom:String = "Martin Quinson"; // impossible de le modifier (c'est une valeur)
var taille: Double = 1.77; // en metre
var marie = true; // Signifie vrai; le contraire (faux) s'écrirait "false"
// Scala sait que 'true' est une valeur de type Boolean, pas besoin de le répéter

estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
litMessage(): String : renvoie le message qu'il y a écrit par terre (s'il y a rien, on obtient une chaîne vide).
ecritMessage(msg: String) : écrit le message spécifié en argument par terre. S'il y a déjà quelque chose écrit par terre, on ajoute le nouveau message à la fin du précédent.
clearMessage() : efface ce qui est écrit par terre.